2006-02-28 - Tornado2003 - Noticed passkey reset option missing from (my.php,takeprofedit.php,userdetails.php,modtask.php)
2006-02-19 - Bainsy - Fixed takemessage.php missing email from mysql query
2006-02-18 - Laffin - Fixed announce.php passkeys locked to ip's
             Laffin - Added 'Use Email Confirmation' to admincp.php, takesignup.php, ok.php
2006-01-18 - Triton - edited message line 190 in admincp
2006-01-17 - Triton - fixed bittorrent.php in include/config.php missing include/
2006-01-17 - laffin - fixed admincp true/false checkbox entries. Thanx Cronner for finding this bug
2006-01-07 - laffin - removed extra require once from bittorrent.php and added one more globals to cleanup.php (thanx to firewolf for debug session) 
2006-01-06 - masklin & laffin - more missing globals found in cleanup.php
2006-01-02 - laffin - moved line in bittorrent.php (require 'global.php') from bottom to near top (php5/mysql5 problem)
2006-01-02 - plextor12 - Fixed inbox.php mysql query
2005-12-27 - masklin - Fixed cleanup.php missing global
2005-12-25 - xam - Removal of dbconn from all files and moved into bittorrent.php (no longer a function)
                   Use LEFT JOIN in inbox.php and remove the extra queries
2005-12-24 - adrenalin - Add in missing country Moldova into countries.sql
2005-12-21 - Triton - Fixed countries.sql
2005-12-20 - laffin - fixed bittorrent.php line 14, and admincp.php line 324 (errors)
2005-12-07 - laffin -
	Relocated a bunch of variables from bittorrent.php and cleanup.php bitbutcket-upload.php.php
	Added Mod - Admincp.php [By Laffin], Orignal Mod (admincp.php & config.php) [Idea from mod BY Enzo,Ap0c and Triton] this maintains the config.php, which now houses the relocated variables
	Added Mod - Do not delete active torrents that have exceeded the TTL (cleanup.php) [By: TheBrass]
	Added Mod - Alternate Announce Url [By: Laffin](tracker.php) Uses http://my.domain.com/tracker.php/passkey/[announce/scrape] alternative announce/scrape url